--- a/src/main/resources/Views/Admin/AdminMenu-view.fxml
+++ b/src/main/resources/Views/Admin/AdminMenu-view.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.cht.travelmanagement.Controllers.Admin.AdminMenuController"
+            fx:controller="com.cht.travelmanagement.Controllers.Admin.Controller.AdminMenuController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
