--- a/src/main/resources/Views/User/BookingWizard/BookingStep1-view.fxml
+++ b/src/main/resources/Views/User/BookingWizard/BookingStep1-view.fxml
@@ -15,7 +15,10 @@
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Customer Information" />
       <Text layoutX="10.0" layoutY="23.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Search for an existing customer or enter new customer details" />
       <VBox>
+
          <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Search for an Existing Customer" />
+            
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Search for an Existing Customer" />
             <HBox alignment="CENTER" spacing="5.0">
                <children>
