--- a/src/main/resources/Views/User/Bookings-view.fxml
+++ b/src/main/resources/Views/User/Bookings-view.fxml
@@ -1,15 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.cht.travelmanagement.Controllers.User.BookingsController"
-            prefHeight="400.0" prefWidth="600.0">
-    <Text layoutX="271.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bookings"/>
+
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cht.travelmanagement.Controllers.User.BookingsController">
+   <VBox layoutX="60.0" layoutY="31.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <children>
+          <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Bookings" />
+         <Button fx:id="newBooking_btn" mnemonicParsing="false" text="New Booking">
+            <graphic>
+               <FontAwesomeIconView glyphName="PLUS" />
+            </graphic>
+         </Button>
+         <ListView fx:id="bookingList" prefHeight="200.0" prefWidth="200.0" />
+      </children>
+   </VBox>
 </AnchorPane>
