--- a/src/main/resources/Views/User/Dashboard-view.fxml
+++ b/src/main/resources/Views/User/Dashboard-view.fxml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Text?>
+<?import de.jensd.fx.glyphs.fontawesome.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cht.travelmanagement.Controllers.User.DashboardController">
+<ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cht.travelmanagement.Controllers.User.DashboardController">
    <content>
       <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0">
          <children>
@@ -22,7 +18,7 @@
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome back! Here's what's happening with your travel agency today." wrappingWidth="397.5546875" />
                      </children>
                   </VBox>
-                  <Button mnemonicParsing="false" text="Create New Booking">
+                  <Button fx:id="newBooking_btn" mnemonicParsing="false" text="Create New Booking">
                      <graphic>
                         <FontAwesomeIconView glyphName="PLUS" />
                      </graphic>
@@ -43,7 +39,7 @@
                            <padding><Insets bottom="10" left="10" right="10" top="10" /></padding>
                         </HBox>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Total Customers" />
-                        <Label text="248" />
+                        <Label fx:id="totalCustomer_lbl" text="248" />
                         <Text layoutX="10.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Active Travelers" />
                      </children>
                   </VBox>
@@ -62,29 +58,9 @@
                               <Insets bottom="10" left="10" right="10" top="10" />
                            </padding>
                         </HBox>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Total Customers" />
-                        <Label text="248" />
-                        <Text layoutX="10.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Active Travelers" />
-                     </children>
-                  </VBox>
-                  <VBox layoutX="1580.0" layoutY="10.0" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: white;" HBox.hgrow="ALWAYS">
-                     <children>
-                        <HBox alignment="CENTER_LEFT" spacing="10.0">
-                           <children>
-                              <FontAwesomeIconView glyphName="MONEY" size="2em" />
-                              <VBox alignment="CENTER_RIGHT" HBox.hgrow="ALWAYS">
-                                 <children>
-                                    <Label styleClass="stat-growth-text" text="+5%" />
-                                 </children>
-                              </VBox>
-                           </children>
-                           <padding>
-                              <Insets bottom="10" left="10" right="10" top="10" />
-                           </padding>
-                        </HBox>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Total Customers" />
-                        <Label text="248" />
-                        <Text layoutX="10.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Active Travelers" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Ongoing Trips" />
+                        <Label fx:id="ongoingTrips_lbl" text="248" />
+                        <Text layoutX="10.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="In progress" />
                      </children>
                   </VBox>
                   <VBox layoutX="1580.0" layoutY="10.0" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: white;" HBox.hgrow="ALWAYS">
@@ -102,8 +78,28 @@
                               <Insets bottom="10" left="10" right="10" top="10" />
                            </padding>
                         </HBox>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Total Customers" />
-                        <Label text="248" />
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Upcoming Trips" />
+                        <Label fx:id="upcomingTrips_lbl" text="248" />
+                        <Text layoutX="10.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Scheduled" />
+                     </children>
+                  </VBox>
+                  <VBox layoutX="1580.0" layoutY="10.0" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: white;" HBox.hgrow="ALWAYS">
+                     <children>
+                        <HBox alignment="CENTER_LEFT" spacing="10.0">
+                           <children>
+                              <FontAwesomeIconView glyphName="CHECK" size="2em" />
+                              <VBox alignment="CENTER_RIGHT" HBox.hgrow="ALWAYS">
+                                 <children>
+                                    <Label styleClass="stat-growth-text" text="+5%" />
+                                 </children>
+                              </VBox>
+                           </children>
+                           <padding>
+                              <Insets bottom="10" left="10" right="10" top="10" />
+                           </padding>
+                        </HBox>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Completed Trips" />
+                        <Label fx:id="completedTrips_lbl" text="248" />
                         <Text layoutX="10.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Active Travelers" />
                      </children>
                   </VBox>
@@ -120,7 +116,7 @@
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Latest bookings and activities" wrappingWidth="397.5546875" />
                      </children>
                   </VBox>
-                  <Button mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" text="View All">
+                  <Button fx:id="viewAll_btn" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" text="View All">
                      <graphic>
                         <FontAwesomeIconView glyphName="LIST_UL" />
                      </graphic>
@@ -130,7 +126,7 @@
                   <Insets />
                </VBox.margin>
             </HBox>
-            <ListView prefHeight="200.0" prefWidth="200.0">
+            <ListView fx:id="bookingList" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
                <padding>
                   <Insets left="14.0" right="14.0" />
                </padding>
