--- a/src/main/resources/Views/User/BookingWizard/NavigationButtons.fxml
+++ b/src/main/resources/Views/User/BookingWizard/NavigationButtons.fxml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import de.jensd.fx.glyphs.fontawesome.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-
-<AnchorPane prefHeight="25.0" prefWidth="327.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cht.travelmanagement.Controllers.User.BookingWizard.BookingNavigationController">
+<AnchorPane prefHeight="25.0" prefWidth="327.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cht.travelmanagement.Controllers.User.BookingWizard.BookingNavigationController">
    <children>
-      <Button layoutX="79.0" mnemonicParsing="false" text="Back" AnchorPane.leftAnchor="0.0">
+      <Button fx:id="back_btn" layoutX="79.0" mnemonicParsing="false" text="Back" AnchorPane.leftAnchor="0.0">
          <graphic>
             <FontAwesomeIconView glyphName="ARROW_LEFT" />
          </graphic>
       </Button>
-      <Label alignment="CENTER" layoutX="125.0" layoutY="4.0" prefHeight="17.0" prefWidth="58.0" text="Step 1 of 6" textAlignment="CENTER" AnchorPane.leftAnchor="125.0" AnchorPane.rightAnchor="144.0" />
-      <Button layoutX="179.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" text="Next" AnchorPane.rightAnchor="0.0">
+      <Label fx:id="status_lbl" alignment="CENTER" layoutX="125.0" layoutY="4.0" prefHeight="17.0" prefWidth="58.0" text="Step 1 of 6" textAlignment="CENTER" AnchorPane.leftAnchor="125.0" AnchorPane.rightAnchor="144.0" />
+      <Button fx:id="next_btn" layoutX="179.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" text="Next" AnchorPane.rightAnchor="0.0">
          <graphic>
             <FontAwesomeIconView glyphName="ARROW_RIGHT" />
          </graphic>
